build/log/idf_py_stdout_output_14164
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D F:\Bijesh\ESP_Workspace\ESP32_FC\build\bootloader\esp-idf\esptool_py && F:\softwares\Espressif-new\python_env\idf5.2_py3.10_env\Scripts\python.exe F:/softwares/Espressif/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 F:/Bijesh/ESP_Workspace/ESP32_FC/build/bootloader/bootloader.bin"
Bootloader binary size 0x6150 bytes. 0xeb0 bytes (13%) free.
[2/8] Building C object esp-idf/fcManager/CMakeFiles/__idf_fcManager.dir/attitudeManager/attitudeManager.c.obj
FAILED: esp-idf/fcManager/CMakeFiles/__idf_fcManager.dir/attitudeManager/attitudeManager.c.obj 
ccache F:\softwares\Espressif-new\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DNDEBUG -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IF:/Bijesh/ESP_Workspace/ESP32_FC/build/config -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/newlib/platform_include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/config/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/config/include/freertos -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/config/xtensa/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/esp_additions/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/include/soc -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/port/esp32/. -IF:/softwares/Espressif/esp-idf-v5.2.1/components/heap/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/log/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/soc/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/soc/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/soc/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/hal/platform_port/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/hal/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/hal/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_rom/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_rom/include/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_rom/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_common/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_system/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_system/port/soc -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_system/port/include/private -IF:/softwares/Espressif/esp-idf-v5.2.1/components/xtensa/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/xtensa/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/xtensa/deprecated_include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/include/apps -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/include/apps/sntp -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/lwip/src/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/freertos/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcTimer/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_timer/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcIMU/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcUtil/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcSensors/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcLogger/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcUART/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/deprecated -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/analog_comparator/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/dac/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/gpio/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/gptimer/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/i2c/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/i2s/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/ledc/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/mcpwm/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/parlio/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/pcnt/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/rmt/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/sdio_slave/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/sdmmc/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/sigma_delta/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/spi/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/temperature_sensor/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/touch_sensor/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/twai/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/uart/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/usb_serial_jtag/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/driver/touch_sensor/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_pm/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_ringbuf/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDevices/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcIO/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_wifi/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_wifi/wifi_apps/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_event/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_phy/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_phy/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_netif/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/nvs_flash/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/spi_flash/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_partition/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_http_server/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/http_parser -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcCalibration/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcCommon/include -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcControl/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=F:/Bijesh/ESP_Workspace/ESP32_FC=. -fmacro-prefix-map=F:/softwares/Espressif/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/fcManager/CMakeFiles/__idf_fcManager.dir/attitudeManager/attitudeManager.c.obj -MF esp-idf\fcManager\CMakeFiles\__idf_fcManager.dir\attitudeManager\attitudeManager.c.obj.d -o esp-idf/fcManager/CMakeFiles/__idf_fcManager.dir/attitudeManager/attitudeManager.c.obj -c F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/attitudeManager/attitudeManager.c
In file included from F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/attitudeManager/attitudeManager.c:2:
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/attitudeManager/attitudeManager.c: In function 'attitudeManagerStartTimers':
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/include/attitudeManager.h:15:64: error: invalid suffix "f" on integer constant
   15 | #define ATTITUDE_IMU_UPDATE_PERIOD SENSOR_GYRO_SAMPLE_PERIOD * 8f
      |                                                                ^~
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/include/attitudeManager.h:16:40: note: in expansion of macro 'ATTITUDE_IMU_UPDATE_PERIOD'
   16 | #define ATTITUDE_IMU_UPDATE_PERIOD_US (ATTITUDE_IMU_UPDATE_PERIOD * 1000000.0f)
      |                                        ^~~~~~~~~~~~~~~~~~~~~~~~~~
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcManager/attitudeManager/attitudeManager.c:292:68: note: in expansion of macro 'ATTITUDE_IMU_UPDATE_PERIOD_US'
  292 |         esp_err_t err = esp_timer_start_periodic(imuPeriodicTimer, ATTITUDE_IMU_UPDATE_PERIOD_US);
      |                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
